[package]
name = "hake"
version = "0.1.3"
authors = ["cympfh <cympfh@gmail.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1"

[[bin]]
name = "hake-grep"
