[package]
name = "hake"
version = "0.2.0"
authors = ["cympfh <cympfh@gmail.com>"]
edition = "2021"

[dependencies]
structopt = { version = "0.3", default-features = false }
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1"
nom = "7"

[[bin]]
name = "hake-grep"
